circuit-breaking.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metada:
  name: httpbin
spec: 
  host: httpbin
  trafficPollicy:
    connectionPool:
      tcp: 
        maxConnections: 1
      http: 
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection: 
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
