destination-rule-enable-mtls-namespace.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata: 
  name: "default"
  namespace: "giropops"
spec:
  host: "*.giropops.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
