destination-rule-fix-girus-conn.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata: 
  name: "httpbin-gitus"
  namespace: "girus"
spec:
  host: "httpbin.girus.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
