libera-httpbin-https.yaml
apiVersion: networking.istio.io/v1aplha3
kind: ServiceEntry
metadata:
  name: httpbin-ext-https
spec: 
  hosts: 
  - httpbin.org
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
