libera-httpbin.yaml
apiVersion: networking.istio.io/v1aplha3
kind: ServiceEntry
metadata:
  name: httpbin-ext-http
spec: 
  hosts: 
  - httpbin.org
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
