mirroring-httpbin.yaml
apiVersion: networking.istio.io/v1aplha3
kind: VirtualService
metada:
  name: httpbin
spec: 
  hosts: 
    - httpbin
  http:
  - route:
    - destination:
        host: httpbin
        subset: v1
      weight: 100
    mirror: 
      host: httpbin
      subset: v2
