virtual-service-ratings-delay.yaml
apiVersion: networking.istio.io/v1aplha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination: 
        host: ratings
        subset: v1
