virtual-service-retries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec: 
  hosts:
  - helloworld
  http:
  - route: 
    - destination: 
        host: hellowolrd
        subset: v1
    retries: 
      attempts: 5
      perTryTimeout: 2s
