virtual-service-reviews-normal.yaml
apiVersion: networking.istio.io/v1aplha3
kind: VirtualService
metadata: 
  name: reviews
spec:
  hosts:
  - reviews
  http: 
  - route:
    - destination: 
        host: reviews
        subset: v2
